Courses Content Changed

--- a/appdevelopment.html
+++ b/appdevelopment.html
@@ -107,14 +107,8 @@
         <div id="w-node-ba664d03-96ff-3927-b94b-449f0e6d0d97-6b6fabd2" class="relative content">
           <div class="fade-in-move-on-scroll">
             <div class="content">
-              <h1 class="product-title">Launch Your Career Master Mobile App Development</h1>
-              <p class="grey-text">Transform your skills and build a portfolio-ready mobile app with our focused
-                masterclass. Learn React Native, Flutter, and Firebase through practical, hands-on projects, weekly live
-                Q&A, and 30+ recorded lessons. Benefit from code templates, cheat sheets, and 24/7 expert support. Plus,
-                discover how to monetize your apps and launch a freelancing career. Earn a certificate and publish your
-                apps on major app stores. Start building your future today.
-
-              </p>
+              <h1 class="product-title" data-en="Create the Next Big App – Learn Mobile App Development Online" data-ar="اصنع التطبيق الكبير التالي - تعلم تطوير تطبيقات الجوال عبر الإنترنت">Create the Next Big App – Learn Mobile App Development Online</h1>
+              <p class="grey-text" data-en="Mobile apps power the digital economy — from startups to global enterprises. Scitor Academy's App Development Course empowers you to create real-world mobile applications for Android and iOS using the most in-demand technologies. You'll learn app development from the ground up — from design thinking to publishing your app to the Play Store or App Store. No prior coding experience? No problem. Our trainers guide you step-by-step with practical, hands-on learning." data-ar="تطبيقات الجوال هي قوة الاقتصاد الرقمي - من الشركات الناشئة إلى الشركات العالمية. تمنحك دورة تطوير التطبيقات من أكاديمية سيتور القدرة على إنشاء تطبيقات جوال واقعية لنظامي Android و iOS باستخدام أحدث التقنيات المطلوبة. ستتعلم تطوير التطبيقات من الأساس - من التفكير التصميمي إلى نشر تطبيقك على متجر Play أو App Store. لا تمتلك خبرة سابقة في البرمجة؟ لا مشكلة. سيوجهك مدربونا خطوة بخطوة من خلال التعلم العملي.">Mobile apps power the digital economy — from startups to global enterprises. Scitor Academy's App Development Course empowers you to create real-world mobile applications for Android and iOS using the most in-demand technologies. You'll learn app development from the ground up — from design thinking to publishing your app to the Play Store or App Store. No prior coding experience? No problem. Our trainers guide you step-by-step with practical, hands-on learning.</p>
             </div>
           </div>
         </div>
@@ -134,102 +128,56 @@
       <div class="product-details-holder">
         <div class="rich-text-holder">
           <div id="w-node-c8ea1f44-9e5b-c6de-6654-3c9f3d477327-6b6fabd2" class="about-course-text">
-            <h2>About the Course</h2>
-            <div>Step into the world of modern mobile app development with our App Development Masterclass. Master
-              cutting-edge technologies like React Native, Flutter, and Firebase to build high-performance,
-              cross-platform apps. Whether you're a beginner or an experienced developer, this course offers hands-on
-              training, live sessions, and real-world projects to turn your ideas into fully functional apps. Gain the
-              skills to publish on the Google Play Store and Apple App Store while learning industry best practices.
-            </div>
+            <h2 data-en="About the Course" data-ar="حول الدورة">About the Course</h2>
+            <div data-en="Step into the world of modern mobile app development with our App Development Course. Master cutting-edge technologies to build high-performance, cross-platform apps. Whether you're a beginner or an experienced developer, this course offers hands-on training, live sessions, and real-world projects to turn your ideas into fully functional apps. Gain the skills to publish on the Google Play Store and Apple App Store while learning industry best practices." data-ar="ادخل عالم تطوير تطبيقات الجوال الحديثة مع دورتنا في تطوير التطبيقات. أتقن أحدث التقنيات لبناء تطبيقات عالية الأداء عبر المنصات. سواء كنت مبتدئًا أو مطورًا محترفًا، تقدم هذه الدورة تدريبًا عمليًا وجلسات مباشرة ومشاريع واقعية لتحويل أفكارك إلى تطبيقات كاملة الوظائف. اكتسب المهارات اللازمة للنشر على متجر Google Play و Apple App Store مع تعلم أفضل الممارسات الصناعية.">Step into the world of modern mobile app development with our App Development Course. Master cutting-edge technologies to build high-performance, cross-platform apps. Whether you're a beginner or an experienced developer, this course offers hands-on training, live sessions, and real-world projects to turn your ideas into fully functional apps. Gain the skills to publish on the Google Play Store and Apple App Store while learning industry best practices.</div>
 
             <div class="product-details-rich-text w-richtext">
-              <h3>Introduction</h3>
+              <h3 data-en="What You'll Learn" data-ar="ما الذي سوف تتعلمه">What You'll Learn</h3>
               <p>‍</p>
 
-              <h5>Course Highlights</h5>
-              <h5>‍</h5>
               <ul role="list">
-                <li><b>Cross-Platform Mastery:</b> Build apps for iOS and Android using <strong>React Native
-                    (Expo)</strong> and <strong>Flutter</strong>.</li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li><b>Real-World Projects:</b> Develop and deploy fully functional apps with <strong>Firebase</strong>
-                  backend services.</li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li><b>Flexible Learning:</b> Weekly live sessions + 30+ recorded lessons (10–20 mins each).</li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li><b>Expert Mentorship:</b> 24/7 support from industry professionals in a private learners’ group.
-                </li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li><b>Portfolio Building:</b> Showcase your skills with a <strong>final app project</strong> and
-                  publish it on app stores.</li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li><b>Bonus Resources:</b> Access cheat sheets, UI kits, and code templates for rapid development.</li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li><b>Certification:</b> Earn a certificate upon completion to validate your app development expertise.
-                </li>
+                <li data-en="Fundamentals of Mobile App Development" data-ar="أساسيات تطوير تطبيقات الجوال"><b>Fundamentals of Mobile App Development</b></li>
+                <li data-en="Programming with Dart & Flutter or React Native" data-ar="البرمجة باستخدام Dart و Flutter أو React Native"><b>Programming with Dart & Flutter or React Native</b></li>
+                <li data-en="Designing User Interfaces (UI/UX Principles)" data-ar="تصميم واجهات المستخدم (مبادئ UI/UX)"><b>Designing User Interfaces (UI/UX Principles)</b></li>
+                <li data-en="API Integration & Real-Time Data Handling" data-ar="تكامل API ومعالجة البيانات في الوقت الحقيقي"><b>API Integration & Real-Time Data Handling</b></li>
+                <li data-en="Firebase Authentication & Cloud Storage" data-ar="مصادقة Firebase والتخزين السحابي"><b>Firebase Authentication & Cloud Storage</b></li>
+                <li data-en="App Testing & Debugging" data-ar="اختبار التطبيقات وتصحيح الأخطاء"><b>App Testing & Debugging</b></li>
+                <li data-en="Publishing Apps to Play Store & App Store" data-ar="نشر التطبيقات على متجر Play و App Store"><b>Publishing Apps to Play Store & App Store</b></li>
               </ul>
               <p>‍</p>
 
-              <h5>Mastering Mobile App Development</h5>
-              <h5>‍</h5>
-              <ul role="list">
-                <li>Understand the fundamentals of <strong>cross-platform development</strong> and its advantages.</li>
-              </ul>
+              <h3 data-en="Course Features" data-ar="مميزات الدورة">Course Features</h3>
               <p>‍</p>
               <ul role="list">
-                <li>Set up your environment for <strong>React Native (Expo)</strong> and <strong>Flutter</strong>
-                  development.</li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li>Explore how modern frameworks streamline app performance and UI design.</li>
+                <li data-en="Live Training with Expert Developers" data-ar="تدريب مباشر مع مطورين خبراء"><b>Live Training with Expert Developers</b></li>
+                <li data-en="Build Real Apps from Day One" data-ar="بناء تطبيقات حقيقية من اليوم الأول"><b>Build Real Apps from Day One</b></li>
+                <li data-en="Flexible Batch Timings" data-ar="مواعيد مرنة للدورات"><b>Flexible Batch Timings</b></li>
+                <li data-en="GitHub Portfolio + Certification" data-ar="محفظة GitHub + شهادة"><b>GitHub Portfolio + Certification</b></li>
+                <li data-en="Access to Community & Career Support" data-ar="الوصول إلى المجتمع والدعم الوظيفي"><b>Access to Community & Career Support</b></li>
               </ul>
               <p>‍</p>
 
-              <h5>Core App Development Skills</h5>
-              <h4>‍</h4>
-              <ul role="list">
-                <li>Learn <strong>state management</strong> with Redux, Context API, and Riverpod for scalable apps.
-                </li>
-              </ul>
+              <h3 data-en="Who Can Join?" data-ar="من يمكنه الانضمام؟">Who Can Join?</h3>
               <p>‍</p>
               <ul role="list">
-                <li>Integrate <strong>Firebase</strong> for authentication, databases, and cloud storage.</li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li>Fetch and manage data efficiently using <strong>REST APIs</strong>.</li>
+                <li data-en="Students and freshers exploring app careers" data-ar="الطلاب والخريجون الجدد الذين يستكشفون وظائف التطبيقات"><b>Students and freshers exploring app careers</b></li>
+                <li data-en="Web developers looking to enter mobile space" data-ar="مطورو الويب الراغبون في دخول مجال الجوال"><b>Web developers looking to enter mobile space</b></li>
+                <li data-en="Entrepreneurs & startup founders" data-ar="رواد الأعمال ومؤسسو الشركات الناشئة"><b>Entrepreneurs & startup founders</b></li>
+                <li data-en="Tech enthusiasts curious about mobile tech" data-ar="المهتمون بالتكنولوجيا الفضوليون حول تقنيات الجوال"><b>Tech enthusiasts curious about mobile tech</b></li>
               </ul>
               <p>‍</p>
 
-              <h5>UI/UX & App Publishing</h5>
+              <h3 data-en="Why Scitor Academy?" data-ar="لماذا أكاديمية سيتور؟">Why Scitor Academy?</h3>
               <p>‍</p>
               <ul role="list">
-                <li>Design intuitive interfaces with <strong>Material UI</strong> and custom styling.</li>
+                <li data-en="Industry-led Curriculum" data-ar="منهج دراسي يقوده الصناعة"><b>Industry-led Curriculum</b></li>
+                <li data-en="Real Projects & Mentoring" data-ar="مشاريع حقيقية والإرشاد"><b>Real Projects & Mentoring</b></li>
+                <li data-en="Certification that adds value to your resume" data-ar="شهادة تضيف قيمة لسيرتك الذاتية"><b>Certification that adds value to your resume</b></li>
               </ul>
               <p>‍</p>
-              <ul role="list">
-                <li>Prepare apps for deployment on the <strong>Google Play Store</strong> and <strong>Apple App
-                    Store</strong>.</li>
-              </ul>
-              <p>‍</p>
-              <ul role="list">
-                <li>Bonus: Learn to monetize apps and freelance as a mobile developer.</li>
-              </ul>
+
+              <p data-en="Learn how to turn your ideas into powerful mobile apps. Enroll in our App Development Course today!" data-ar="تعلم كيفية تحويل أفكارك إلى تطبيقات جوال قوية. سجل في دورة تطوير التطبيقات اليوم!"><b>Learn how to turn your ideas into powerful mobile apps. Enroll in our App Development Course today!</b></p>
             </div>
-            </ul>
             <p>‍</p>
           </div>
         </div>
@@ -240,27 +188,21 @@
                 <div class="facts-cared-openned-container details">
                   <div class="scroll-content-holder">
                     <div class="scroll-content">
-                      <div class="tag">Level</div>
-                      <div class="back-card-content">Beginner-friendly, with advanced concepts for experienced
-                        developers.</div>
+                      <div class="tag" data-en="Level" data-ar="المستوى">Level</div>
+                      <div class="back-card-content" data-en="Beginner-friendly, with advanced concepts for experienced developers." data-ar="مناسب للمبتدئين، مع مفاهيم متقدمة للمطورين ذوي الخبرة.">Beginner-friendly, with advanced concepts for experienced developers.</div>
                     </div>
                     <div class="scroll-content">
-                      <div class="tag">Duration</div>
-                      <div class="back-card-content">3 to 4 months (self-paced with weekly live sessions).</div>
+                      <div class="tag" data-en="Duration" data-ar="المدة">Duration</div>
+                      <div class="back-card-content" data-en="3 to 4 months (self-paced with weekly live sessions)." data-ar="3 إلى 4 أشهر (ذاتي التعلم مع جلسات مباشرة أسبوعية).">3 to 4 months (self-paced with weekly live sessions).</div>
                     </div>
                     <div class="scroll-content">
-                      <div class="tag">Videos</div>
-                      <div class="back-card-content">30+ pre-recorded lessons (10–20 minutes each).</div>
+                      <div class="tag" data-en="Videos" data-ar="الفيديوهات">Videos</div>
+                      <div class="back-card-content" data-en="30+ pre-recorded lessons (10–20 minutes each)." data-ar="30+ درسًا مسجلًا مسبقًا (10-20 دقيقة لكل منها).">30+ pre-recorded lessons (10–20 minutes each).</div>
                     </div>
                     <div class="scroll-content">
-                      <div class="tag">Files included</div>
-                      <div class="back-card-content">App development cheat sheets, code templates, and UI kits.</div>
+                      <div class="tag" data-en="Files included" data-ar="الملفات المضمنة">Files included</div>
+                      <div class="back-card-content" data-en="App development cheat sheets, code templates, and UI kits." data-ar="ملفات غشية لتطوير التطبيقات، قوالب كود، ومجموعات واجهة المستخدم.">App development cheat sheets, code templates, and UI kits.</div>
                     </div>
-                  </div>
-                  <div class="price-holder details">
-                    <div class="grey-color">Price:</div>
-                    <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_price_%22%2C%22to%22%3A%22innerHTML%22%7D%5D"
-                      class="product-item-price">SAR 899</div>
                   </div>
                  
                   <div class="xbutton rotate"><img
@@ -272,7 +214,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
 
