--- a/digitalmarketing.html
+++ b/digitalmarketing.html
@@ -110,12 +110,8 @@
         <div id="w-node-ba664d03-96ff-3927-b94b-449f0e6d0d97-6b6fabd2" class="relative content">
           <div class="fade-in-move-on-scroll">
             <div class="content">
-              <h1 class="product-title">Master the Future of Digital Marketing with AI</h1>
-              <p class="grey-text">Learn to combine AI tools with digital marketing strategies in Scitor Academy’s
-                Digital Marketing with AI course. Master social media, SEO, paid ads, and analytics through hands-on
-                training and real-world projects. Stay ahead in the marketing game enroll today!
-
-              </p>
+              <h1 class="product-title">Digital Marketing Course</h1>
+              <p class="grey-text">Learn Digital Marketing – Become a Certified Digital Marketer. Master digital marketing with Scitor Academy's expert-led course. Learn SEO, social media, Google Ads, email marketing, and more. Designed for beginners and professionals, our course offers live projects, flexible online classes, and a recognized certification to help you boost your career, grow your business, or start freelancing in the digital world. Enroll today and start marketing with confidence!</p>
             </div>
           </div>
         </div>
@@ -137,96 +133,97 @@
         <div class="rich-text-holder">
           <div id="w-node-c8ea1f44-9e5b-c6de-6654-3c9f3d477327-6b6fabd2" class="about-course-text">
             <h2>About the Course</h2>
-            <div>Step into the future of marketing with Scitor Academy’s Digital Marketing with AI course. This program is designed to help you master the latest AI-powered tools and strategies, from social media marketing and SEO to paid ads and analytics. Whether you're a beginner or looking to upgrade your skills, this course offers hands-on training, live sessions, and real-world projects to build AI-driven campaigns. Join us and gain the expertise to stay ahead in the ever-evolving world of digital marketing!</div>
+            <div>Our comprehensive Digital Marketing course covers all essential aspects of modern digital marketing, from search engine optimization to social media strategies. You'll gain hands-on experience with industry-standard tools and techniques, preparing you for real-world marketing challenges.</div>
           </div>
           <div class="product-details-rich-text w-richtext">
-            <h3>Introduction</h3>
+            <h3>What You'll Learn</h3>
             <p>‍</p>
-            <h5>Course Highlights</h5>
-            <h5>‍</h5>
+            <h5>Core Digital Marketing Skills</h5>
+            <p>‍</p>
             <ul role="list">
-              <li><b>AI-Powered Tools:</b> Master tools like ChatGPT, Jasper AI, and more for content creation and analytics.
-              </li>
+              <li><b>SEO (Search Engine Optimization):</b> Master keyword research, on-page and off-page SEO techniques</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li><b>Hands-On Training:</b> Build real-world campaigns for social media, SEO, and paid ads.
-              </li>
+              <li><b>Google Ads & PPC:</b> Create and manage effective pay-per-click campaigns</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li><b>Live + Recorded Classes:</b>  Weekly live sessions and 40+ recorded lessons for flexible learning.
-              </li>
+              <li><b>Social Media Marketing:</b> Strategies for Facebook, Instagram, LinkedIn and other platforms</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li><b> Expert Mentorship:</b> Get 24/7 support and guidance from industry professionals.
-              </li>
+              <li><b>Content Marketing & Copywriting:</b> Create engaging content that converts</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li><b>LPortfolio Building:</b>Complete a final project to showcase your AI-driven marketing skills.
-              </li>
+              <li><b>Email Marketing & Automation:</b> Build effective email campaigns and automation sequences</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li><b>Bonus Resources: </b> Access AI cheat sheets, campaign guides, and SEO worksheets.
-              </li>
+              <li><b>Web Analytics:</b> Use Google Analytics and other tools to measure and optimize performance</li>
+            </ul>
+            <p>‍</p>
+            <h5>Course Features</h5>
+            <p>‍</p>
+            <ul role="list">
+              <li>100% Online with Live Sessions for interactive learning</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li><b> Certification:</b> Earn a certificate to validate your expertise in AI-powered marketing.
-              </li>
-            </ul>
-            <p>‍</p>
-            <h5>Mastering AI-Powered Marketing</h5>
-            <h5>‍</h5>
-            <ul role="list">
-              <li>Understand the role of AI in transforming digital marketing strategies.
-              </li>
+              <li>Real-Time Project Work to build your portfolio</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li>Set clear goals for mastering AI tools and techniques in marketing.
-              </li>
+              <li>Hands-on experience with industry tools: Google Ads, Meta Business Suite, Canva, SEMrush</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li>Explore how AI enhances audience engagement and campaign success.
-              </li>
-            </ul>
-            <p>‍</p>
-            <h5>Foundations of Digital Marketing
-            </h5>
-            <h4>‍</h4>
-            <ul role="list">
-              <li>Revisit core marketing principles and their application in the digital age.</li>
+              <li>Access to Recorded Sessions for flexible learning</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li>Analyze real-world examples of successful AI-driven marketing campaigns.</li>
+              <li>Certification upon Completion to validate your skills</li>
+            </ul>
+            <p>‍</p>
+            <h5>Who Can Join?</h5>
+            <p>‍</p>
+            <ul role="list">
+              <li>Students looking to start a career in digital marketing</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li>Analyzing successful advanced design examples</li>
-            </ul>
-            <p>‍</p>
-            <h5>Optimizing Campaigns with AI</h5>
-            <p>‍</p>
-            <ul role="list">
-              <li>Understand the importance of AI in optimizing email and ad campaigns.</li>
+              <li>Freelancers wanting to expand their service offerings</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li>Set clear objectives for creating data-driven marketing strategies.
-
-              </li>
+              <li>Job seekers aiming to enhance their employability</li>
             </ul>
             <p>‍</p>
             <ul role="list">
-              <li>Learn how AI boosts user engagement, conversions, and ROI.
-
-              </li>
+              <li>Marketing professionals seeking to update their skills</li>
+            </ul>
+            <p>‍</p>
+            <ul role="list">
+              <li>Small business owners who want to market their business effectively</li>
+            </ul>
+            <p>‍</p>
+            <h5>Why Scitor Academy?</h5>
+            <p>‍</p>
+            <ul role="list">
+              <li>Expert Trainers with real industry experience</li>
+            </ul>
+            <p>‍</p>
+            <ul role="list">
+              <li>Hands-On Learning with real campaigns and case studies</li>
+            </ul>
+            <p>‍</p>
+            <ul role="list">
+              <li>Job Assistance & Interview Prep to help you land your dream job</li>
+            </ul>
+            <p>‍</p>
+            <ul role="list">
+              <li>Practical curriculum focused on current industry needs</li>
             </ul>
             <p>‍</p>
           </div>
@@ -239,26 +236,22 @@
                   <div class="scroll-content-holder">
                     <div class="scroll-content">
                       <div class="tag">Level</div>
-                      <div class="back-card-content">Suitable for beginners and advanced learners.</div>
+                      <div class="back-card-content">Beginner to Advanced</div>
                     </div>
                     <div class="scroll-content">
                       <div class="tag">Duration</div>
-                      <div class="back-card-content">Flexible learning over 4 to 6 months.</div>
+                      <div class="back-card-content">Flexible learning schedule</div>
                     </div>
                     <div class="scroll-content">
-                      <div class="tag">Videos</div>
-                      <div class="back-card-content">40+ pre-recorded lessons (15–30 minutes each).</div>
+                      <div class="tag">Format</div>
+                      <div class="back-card-content">Live + Recorded Sessions</div>
                     </div>
                     <div class="scroll-content">
-                      <div class="tag">Files included</div>
-                      <div class="back-card-content">Access to AI cheat sheets, campaign guides, and SEO worksheets.</div>
+                      <div class="tag">Tools</div>
+                      <div class="back-card-content">Google Ads, Meta Suite, SEMrush, Canva</div>
                     </div>
                   </div>
-                  <div class="price-holder details">
-                    <div class="grey-color">Price:</div>
-                    <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_price_%22%2C%22to%22%3A%22innerHTML%22%7D%5D"
-                      class="product-item-price">SAR 899</div>
-                  </div>
+                 
                  
                 </div>
                 <div class="xbutton rotate"><img
@@ -343,18 +336,6 @@
         <div class="footer-grid-content" >
           <div class="primary-font" data-en="Follow us" data-ar="تابعنا" style="display: flex; justify-content: center; align-items: center; width: full;">Follow us</div>
           <div class="social-media-icons">
-            <!-- <a href="https://www.youtube.com/@wedoflow" target="_blank" class="social-media-link w-inline-block">
-              <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86bddff596d3f91eac632_Facebook.svg" loading="lazy" class="social-media-icon" />
-              <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c310c78e044c37f07ab_Facebook 1.svg" loading="lazy" class="colored-icon" />
-            </a> -->
-            <!-- <a href="https://linkedin.com/company/wedoflow" target="_blank" class="social-media-link w-inline-block">
-              <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86bfbb95f975874c324f1_Twitter.svg" loading="lazy" class="social-media-icon" />
-              <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86bebcb313ae127ea218b_Twitter 1.svg" loading="lazy" class="colored-icon" />
-            </a>
-            <a href="https://twitter.com/wedoflow" target="_blank" class="social-media-link w-inline-block">
-              <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c16ff596d3f91eb09f7_Linkedin.svg" loading="lazy" class="social-media-icon" />
-              <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c98404fdcc077d425d7_Linkedin 1.svg" loading="lazy" class="colored-icon" />
-            </a> -->
             <a href="https://www.instagram.com/scitor.academy?igsh=ejkxbzBjdzd1eHls" target="_blank" class="social-media-link w-inline-block">
               <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c21a43f4e9f5a38743c_Instagram.svg" loading="lazy" class="social-media-icon" />
               <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f86c476cf0c2e54d97e048_Instagram 1.svg" loading="lazy" class="colored-icon" />
