--- a/graphicdesigning.html
+++ b/graphicdesigning.html
@@ -109,14 +109,8 @@
         <div id="w-node-ba664d03-96ff-3927-b94b-449f0e6d0d97-6b6fabd2" class="relative content">
           <div class="fade-in-move-on-scroll">
             <div class="content">
-              <h1 class="product-title">Master the Art of Graphic Design and Vedio Editing</h1>
-              <p class="grey-text">Unlock your creativity with Scitor Academy’s Graphic Designing & Video Editing
-                Course! Master tools like Adobe Photoshop, Illustrator, and Premiere Pro to create stunning designs and
-                professional videos. Perfect for beginners and skill-refiners alike, this course offers hands-on
-                projects, mentorship, and a portfolio to kickstart your creative career. Join us and turn your passion
-                into profession!
-
-              </p>
+              <h1 class="product-title">Create. Design. Inspire. Become a Graphic Designer</h1>
+              <p class="grey-text">Unleash your creativity with Scitor Academy's Graphic Design Course. Learn tools like Photoshop, Illustrator, and Canva, and create designs that stand out. Perfect for beginners and aspiring designers, this course includes real-time projects, portfolio development, and one-on-one guidance. Build a creative career in branding, web, or social media design. Start designing your future with us today!</p>
             </div>
           </div>
         </div>
@@ -137,95 +131,47 @@
       <div class="product-details-holder">
         <div class="rich-text-holder">
           <div id="w-node-c8ea1f44-9e5b-c6de-6654-3c9f3d477327-6b6fabd2" class="about-course-text">
-            <h2>About the Course</h2>
-            <div>Step into the world of creativity with Scitor Academy’s Graphic Designing & Video Editing Course! Learn
-              to design eye-catching visuals and edit professional videos using tools like Adobe Photoshop, Illustrator,
-              and Premiere Pro. Perfect for beginners and aspiring professionals, this course combines hands-on projects
-              with expert guidance to help you build a standout portfolio. Transform your passion into a career and
-              start creating today!</div>
+            <h2>2. Graphic Designing Course</h2>
+            <div>Unleash your creative potential with our comprehensive Graphic Design Course. Whether you're starting from scratch or looking to refine your skills, this course will equip you with industry-standard tools and techniques to create stunning visual designs.</div>
           </div>
           <div class="product-details-rich-text w-richtext">
-            <h3>Introduction</h3>
-            <p>‍</p>
-            <h5>Course Highlights</h5>
-            <h5>‍</h5>
-            <ul role="list">
-              <li><b>Tools Covered:</b> Adobe Photoshop, Illustrator, Premiere Pro, and Canva.</li>
-            </ul>
+            <h3>What You'll Learn</h3>
             <p>‍</p>
             <ul role="list">
-              <li><b>Skills You’ll Gain:</b> Logo design, branding, motion graphics, and video editing.
-              </li>
+              <li><strong>Adobe Photoshop, Illustrator & InDesign:</strong> Master the essential tools for professional graphic design.</li>
+              <li><strong>Canva for Business:</strong> Learn to create professional designs quickly with this popular platform.</li>
+              <li><strong>Logo Design & Branding:</strong> Develop skills to create memorable logos and cohesive brand identities.</li>
+              <li><strong>UI/UX Basics:</strong> Understand the fundamentals of user interface and user experience design.</li>
+              <li><strong>Typography & Color Theory:</strong> Learn how to use fonts and colors effectively in your designs.</li>
+              <li><strong>Portfolio Development:</strong> Build a professional portfolio to showcase your work to potential clients or employers.</li>
             </ul>
+            <p>‍</p>
+            <h3>Course Features</h3>
             <p>‍</p>
             <ul role="list">
-              <li><b>Hands-On Projects:</b> Build a professional portfolio with real-world projects.
-              </li>
+              <li>Beginner to Advanced Modules: Structured learning path for all skill levels.</li>
+              <li>Live Project Assignments: Real-world projects to apply your skills.</li>
+              <li>Creative Mentoring Sessions: One-on-one guidance from industry experts.</li>
+              <li>Certification + Portfolio Review: Get certified and have your portfolio professionally reviewed.</li>
             </ul>
+            <p>‍</p>
+            <h3>Who Can Join?</h3>
             <p>‍</p>
             <ul role="list">
-              <li><b>Community Support:</b> Access to a private learners’ group and 24/7 mentorship
-
-              </li>
+              <li>Creative Beginners: No prior experience needed.</li>
+              <li>Aspiring Designers & Freelancers: Looking to build professional skills.</li>
+              <li>Social Media Managers: Wanting to create better visual content.</li>
             </ul>
             <p>‍</p>
-            <h5>Mastering Creative Tools and Techniques</h5>
-            <h5>‍</h5>
-            <ul role="list">
-              <li>Understand the role of graphic design and video editing in professional creative work.</li>
-            </ul>
+            <h3>Why Scitor Academy?</h3>
             <p>‍</p>
             <ul role="list">
-              <li>Set clear goals and expectations for mastering advanced design and editing skills.</li>
+              <li>Learn from Design Experts: Our instructors are industry professionals.</li>
+              <li>Hands-on Practice with Real Brands: Work on actual design challenges.</li>
+              <li>Supportive Community & Feedback: Get constructive feedback on your work.</li>
             </ul>
             <p>‍</p>
-            <ul role="list">
-              <li>Explore the impact of high-quality visuals and videos on audience engagement and brand success.
-
-              </li>
-            </ul>
-            <p>‍</p>
-            <h5>Foundations of Design and Editing
-            </h5>
-            <h4>‍</h4>
-            <ul role="list">
-              <li>Revisit foundational design principles: typography, color theory, and composition.
-
-              </li>
-            </ul>
-            <p>‍</p>
-            <ul role="list">
-              <li>Learn advanced techniques for creating logos, branding, and social media designs.
-
-              </li>
-            </ul>
-            <p>‍</p>
-            <ul role="list">
-              <li>Analyze successful examples of professional designs and video content.
-
-              </li>
-            </ul>
-            <p>‍</p>
-            <h5>Optimizing Your Creative Workflow
-            </h5>
-            <p>‍</p>
-            <ul role="list">
-              <li>Understand the importance of efficient workflows in design and video editing.
-
-              </li>
-            </ul>
-            <p>‍</p>
-            <ul role="list">
-              <li>Set clear objectives for creating impactful designs and videos.
-
-              </li>
-            </ul>
-            <p>‍</p>
-            <ul role="list">
-              <li>Learn how optimized creative content boosts user engagement and conversion rates.
-              </li>
-            </ul>
-            <p>‍</p>
+            <h4>Start designing your future — join the next batch today!</h4>
           </div>
         </div>
         <div id="w-node-_0eeea42e-fe93-d1ba-d5b3-ce40eebc1904-6b6fabd2" class="get-course-holder">
@@ -236,26 +182,22 @@
                   <div class="scroll-content-holder">
                     <div class="scroll-content">
                       <div class="tag">Level</div>
-                      <div class="back-card-content">Suitable for beginners and advanced learners.</div>
+                      <div class="back-card-content">Beginner to Advanced</div>
                     </div>
                     <div class="scroll-content">
                       <div class="tag">Duration</div>
-                      <div class="back-card-content">5h 30min</div>
+                      <div class="back-card-content">Flexible learning schedule</div>
                     </div>
                     <div class="scroll-content">
-                      <div class="tag">Videos</div>
-                      <div class="back-card-content"> 30+ pre-recorded lessons (10–20 minutes each).</div>
+                      <div class="tag">Projects</div>
+                      <div class="back-card-content">Multiple real-world design projects</div>
                     </div>
                     <div class="scroll-content">
-                      <div class="tag">Files included</div>
-                      <div class="back-card-content">Access to design templates, video editing project files, and guides.</div>
+                      <div class="tag">Materials</div>
+                      <div class="back-card-content">Design templates, project files, and guides</div>
                     </div>
                   </div>
-                  <div class="price-holder details">
-                    <div class="grey-color">Price:</div>
-                    <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_price_%22%2C%22to%22%3A%22innerHTML%22%7D%5D"
-                      class="product-item-price">SAR 799</div>
-                  </div>
+                 
                   
                 </div>
                 <div class="xbutton rotate"><img
