--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -107,13 +107,9 @@
         <div id="w-node-ba664d03-96ff-3927-b94b-449f0e6d0d97-6b6fabd2" class="relative content">
           <div class="fade-in-move-on-scroll">
             <div class="content">
-              <h1 class="product-title">Launch Your Career Master Web Development</h1>
-              <p class="grey-text">Master the art of web development with our 3–4 month intensive course, covering
-                front-end, back-end, databases, and deployment. Learn in-demand technologies like React, Next.js,
-                Node.js, MongoDB, and Firebase through live sessions, hands-on projects, and expert mentorship. Whether
-                you're a beginner or looking to advance your skills, this course will equip you to build modern,
-                scalable web applications plus, get a freelancing bonus to kickstart your career!
-
+              <h1 class="product-title">Build the Web – Learn Web Development with Scitor Academy</h1>
+              <p class="grey-text">In today's digital age, every business, brand, and idea needs a website. Web development is one of the most in-demand skills globally, offering endless job and freelancing opportunities. At Scitor Academy, we equip you with everything you need to become a confident front-end and back-end web developer.
+              Whether you're a complete beginner or looking to upskill, our expert-led training and real-world projects will help you build fully functional, responsive websites from scratch.
               </p>
             </div>
           </div>
@@ -129,97 +125,102 @@
     </div>
     <div class="details-section-bg"></div>
   </div>
+  
   <div class="section z-index">
     <div class="container other-products">
       <div class="product-details-holder">
         <div class="rich-text-holder">
           <div id="w-node-c8ea1f44-9e5b-c6de-6654-3c9f3d477327-6b6fabd2" class="about-course-text">
             <h2>About the Course</h2>
-            <div>Step into the world of modern full-stack web development with our Web Development Masterclass. Master
-              cutting-edge technologies like React, Next.js, Node.js, and MongoDB to build dynamic, responsive, and
-              scalable web applications. Whether you're a beginner or an experienced coder, this course offers hands-on
-              training, live sessions, and real-world projects to transform your ideas into fully functional websites.
-              Learn industry best practices and deploy your projects like a pro.
+            <div>Step into the world of web development with Scitor Academy's comprehensive course. Learn to build modern, responsive websites and web applications using the latest technologies and frameworks. Our hands-on approach ensures you gain practical skills that are immediately applicable in the real world.
             </div>
 
             <div class="product-details-rich-text w-richtext">
-              <h3>Introduction</h3>
+              <h3>What You'll Learn</h3>
               <p>‍</p>
-              <h5>Course Highlights</h5>
-              <h5>‍</h5>
               <ul role="list">
-                <li><b>Full-Stack Mastery:</b> Build front-end with <strong>React & Next.js</strong> and back-end with
-                  <strong>Node.js & Express.js</strong>.</li>
+                <li><strong>HTML5, CSS3, JavaScript</strong> (Core Web Technologies)</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li><b>Real-World Projects:</b> Develop and deploy dynamic web apps with <strong>MongoDB &
-                    Firebase</strong>.</li>
+                <li><strong>Responsive Design</strong> with Bootstrap & Flexbox</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li><b>Flexible Learning:</b> Weekly live sessions + 30+ recorded lessons (10–20 mins each).</li>
+                <li><strong>Front-end Frameworks:</strong> React.js / Vue.js</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li><b>Expert Mentorship:</b> 24/7 support from industry professionals in a private learners’ group.
-                </li>
+                <li><strong>Version Control</strong> with Git & GitHub</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li><b>Portfolio Building:</b> Showcase your skills with a <strong>final full-stack project</strong>
-                  hosted on Netlify, Vercel, or AWS.</li>
+                <li><strong>Backend Development</strong> with Node.js and Express</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li><b>Bonus Resources:</b> Access cheat sheets, code templates, and freelance client acquisition
-                  strategies.</li>
+                <li><strong>Database Integration:</strong> MongoDB & Firebase</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li><b>Certification:</b> Earn a certificate upon completion to validate your web development expertise.
-                </li>
+                <li><strong>APIs, Authentication,</strong> and Deployment</li>
               </ul>
               <p>‍</p>
-              <h5>Mastering Web Development</h5>
-              <h5>‍</h5>
-              <ul role="list">
-                <li>Understand the fundamentals of <strong>HTML, CSS, and JavaScript</strong> for modern web apps.</li>
-              </ul>
+              <h3>Course Features</h3>
               <p>‍</p>
               <ul role="list">
-                <li>Set up your environment for <strong>React, Next.js, and Node.js</strong> development.</li>
+                <li>Live Online Classes & Doubt-Clearing Sessions</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li>Explore how frameworks like <strong>Tailwind CSS</strong> and <strong>Redux Toolkit</strong>
-                  streamline styling and state management.</li>
-              </ul>
-              <p>‍</p>
-              <h5>Core Development Skills</h5>
-              <h4>‍</h4>
-              <ul role="list">
-                <li>Learn <strong>state management</strong> with Redux Toolkit for scalable applications.</li>
+                <li>Real-World Project Assignments</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li>Integrate <strong>Firebase</strong> for authentication and <strong>MongoDB</strong> for databases.
-                </li>
+                <li>Full Access to Code Repositories</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li>Build and consume <strong>REST & GraphQL APIs</strong> for seamless data handling.</li>
-              </ul>
-              <p>‍</p>
-              <h5>Deployment & Career Growth</h5>
-              <p>‍</p>
-              <ul role="list">
-                <li>Deploy web apps on <strong>Netlify, Vercel, and AWS</strong> with best practices.</li>
+                <li>Interview Prep & Resume Support</li>
               </ul>
               <p>‍</p>
               <ul role="list">
-                <li>Bonus: Learn how to <strong>get web development clients & freelance</strong>.</li>
+                <li>Certification upon Completion</li>
               </ul>
+              <p>‍</p>
+              <h3>Who Should Join?</h3>
+              <p>‍</p>
+              <ul role="list">
+                <li>College students & fresh graduates</li>
+              </ul>
+              <p>‍</p>
+              <ul role="list">
+                <li>Freelancers & job seekers</li>
+              </ul>
+              <p>‍</p>
+              <ul role="list">
+                <li>Marketing & design professionals</li>
+              </ul>
+              <p>‍</p>
+              <ul role="list">
+                <li>Anyone interested in building websites or apps</li>
+              </ul>
+              <p>‍</p>
+              <h3>Why Scitor Academy?</h3>
+              <p>‍</p>
+              <ul role="list">
+                <li>Learn from industry-experienced developers</li>
+              </ul>
+              <p>‍</p>
+              <ul role="list">
+                <li>Hands-on practice with project-based learning</li>
+              </ul>
+              <p>‍</p>
+              <ul role="list">
+                <li>Personalized mentoring and career support</li>
+              </ul>
+              <p>‍</p>
+              <p>Start building websites and future-proof your career with our Web Development Course!</p>
             </div>
             </ul>
             <p>‍</p>
@@ -247,11 +248,7 @@
                       <div class="tag">Files included</div>
                       <div class="back-card-content">Web development cheat sheets, code exercises, and project templates.</div>
                     </div>
-                    <div class="price-holder details">
-                      <div class="grey-color">Price:</div>
-                      <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_price_%22%2C%22to%22%3A%22innerHTML%22%7D%5D"
-                        class="product-item-price">SAR 799</div>
-                    </div>
+                    
 
                   <div class="xbutton rotate"><img
                       src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/6500215e2c50268eae2de8df_X Button.svg"
